Fixed Clear/Delete alignment & replaced icons

--- a/resources/css/palette.css
+++ b/resources/css/palette.css
@@ -1,7 +1,7 @@
 :root {
-    --primary: yellow;
+    --primary: grey;
     --resolution: 150px;
     --columnCount: 8;
     --rowWidth: calc(var(--resolution) * var(--columnCount));
-    --radius: 30px
+    --radius: 30px;
 }
