--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -146,6 +146,24 @@ body {
     /* In future we should crop them instead. */
 }
 
+.rowTitle {
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
+
+.resetDeleteContainer {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.resetDeleteImage {
+    width: calc(var(--resolution) / 3);
+}
+
 /* TODO: Make sure rowTab's draggable section extends the full
 length available after the addRowAbove and addRowBelow buttons
 are accounted for. This way, even if the row has a ton of images
